refactor(services): 优化超级用户服务的进程管理实现
- 使用ProcessBuilder替代Runtime.exec创建进程
- 启用错误流重定向以简化输出处理